--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
   "files.associations": {
     "stdbool.h": "c",
     "stdio.h": "c",
-    "sdl.h": "c"
+    "sdl.h": "c",
+    "game.h": "c"
   }
 }
